--- a/_pages/categories-archive.html
+++ b/_pages/categories-archive.html
@@ -13,4 +13,5 @@ author_profile: true
   {% for post in posts %}
     {% include archive-single.html %}
   {% endfor %}
+  {% break %}
 {% endfor %}
